# STATE-NAV

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
ROS/: outdoor_example.bag  rviz_setting.rviz
docker/: Dockerfile.x64  runfrombuild.sh  startup.sh
executables/: main_global_planning.py  main_traversability_estimation.py
executables/configs/: planning_config.yaml
statenav_global/: __init__.py
statenav_global/mapping/: __init__.py  globalmap.py  uncertainty_models.py
statenav_global/mapping/checkpoints/: elevonly_vw2instab.pth
statenav_global/planners/: __init__.py  global_RRTStar_planner.py
statenav_global/planners/RRTStar_package/: env.py  plotting.py  rrt.py  utils.py
